--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <br />
+  <footer>
+    <a href="/">Return to Homepage</a>
+  </footer>
 </html>
